--- a/test.html
+++ b/test.html
@@ -7,5 +7,6 @@
 	<link rel="stylesheet" type="text/css" href="test.css"/>
 	<body>
 		<div>第一个repository文件</div>
+		<div><b>第二次提交的代码</b></div>
 	</body>
 </html>
